@@ -2,6 +2,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 
 Phoronix Test Suite (Git)
 
+pts-core: Add keep-results-in-result-file sub-command
 pts-core: Split the dynamic result viewer into its own embed class for result file handling to allow for easy re-use by OpenBenchmarking, Phoromatic, etc
 pts_Graph: Add histogram type
 phodevi: CPU core name / family detection to friendly strings (OpenBenchmarking.org driven)
